<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/orange">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Редактирование клиента"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="59dp"
            android:layout_height="31dp"
            android:background="@color/orange"
            android:src="@drawable/arrow_back24px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:textColor="@color/orange"
        android:textSize="25sp"
        android:text="@string/person" />

    <EditText
        android:id="@+id/person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:ems="10"
        android:inputType="text"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange"
        android:backgroundTint="@color/white"
        android:hint="@string/person_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:text="@string/street" />

    <EditText
        android:id="@+id/street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange"
        android:backgroundTint="@color/white"
        android:hint="@string/street_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:text="@string/building" />

    <EditText
        android:id="@+id/building"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange"
        android:backgroundTint="@color/white"
        android:hint="@string/building_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:text="@string/office" />

    <EditText
        android:id="@+id/office"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange"
        android:backgroundTint="@color/white"
        android:hint="@string/office_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/city_text"
        android:textColor="@color/orange"
        android:textSize="25sp" />


    <Spinner
        android:id="@+id/city_spinner"
        android:background="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:text="Изменить"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:text="Удалить"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>